[gd_scene load_steps=6 format=3 uid="uid://ckf8bygh7lnk0"]

[ext_resource type="Script" path="res://Script/TSPMenu.gd" id="1_7wmod"]
[ext_resource type="Texture2D" uid="uid://cs024qy6eh4mb" path="res://Recursos/new_gradient_texture_1d normal.tres" id="2_gw11m"]
[ext_resource type="Texture2D" uid="uid://d1g0uu24c0jpw" path="res://Recursos/new_gradient_texture_1d.tres" id="3_glhla"]

[sub_resource type="Gradient" id="Gradient_djghs"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3lofb"]
gradient = SubResource("Gradient_djghs")

[node name="TspMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wmod")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_3lofb")

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Traveling Salesperson solutions"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="TextureButton" type="TextureButton" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("2_gw11m")
texture_pressed = ExtResource("3_glhla")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Lexigrafico"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("2_gw11m")
texture_pressed = ExtResource("3_glhla")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "TSP Simples"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("2_gw11m")
texture_pressed = ExtResource("3_glhla")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "TSP Lexigrafico"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("2_gw11m")
texture_pressed = ExtResource("3_glhla")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "TSP Genetico"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton5" type="TextureButton" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("2_gw11m")
texture_pressed = ExtResource("3_glhla")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "TSP Heuristico"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton6" type="TextureButton" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
texture_normal = ExtResource("2_gw11m")
texture_pressed = ExtResource("3_glhla")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "sair"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/VBoxContainer/GridContainer/TextureButton6" to="." method="_on_texture_button_6_pressed"]
